bridge/base/0-sacro-ml-namespace.yaml
#! 0-sacro-ml-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: sacro-ml
    labels:
        com.docker.compose.project: sacro-ml
